--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "hexchess",
-  "version": "1.0.0",
-  "description": "Proyecto de Graficas Computacionales en Web",
-  "main": "src/app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "webpack": "webpack --mode development --watch"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "mongoose": "^6.6.5",
-    "nanoid": "^3.3.4",
-    "passport": "^0.6.0",
-    "passport-facebook": "^3.0.0",
-    "socket.io": "^4.5.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "hexchess",
+	"version": "1.0.0",
+	"description": "Proyecto de Graficas Computacionales en Web",
+	"main": "src/app.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node src/app.js",
+		"dev": "nodemon src/app.js",
+		"webpack": "webpack --mode development --watch"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^16.0.3",
+		"ejs": "^3.1.8",
+		"express": "^4.18.1",
+		"express-session": "^1.17.3",
+		"mongoose": "^6.6.5",
+		"nanoid": "^3.3.4",
+		"passport": "^0.6.0",
+		"passport-facebook": "^3.0.0",
+		"socket.io": "^4.5.2",
+		"three": "^0.145.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.20"
+	}
 }
