--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@fontsource/silkscreen": "^4.5.0",
 		"bootstrap": "^5.0.0",
 		"boxicons": "^2.1.4",
 		"dotenv": "^16.0.3",
 		"ejs": "^3.1.8",
 		"express": "^4.18.1",
 		"express-session": "^1.17.3",
+		"module-alias": "^2.2.2",
 		"mongoose": "^6.6.5",
 		"nanoid": "^3.3.4",
 		"passport": "^0.6.0",
 		"passport-facebook": "^3.0.0",
+		"raw-loader": "^4.0.2",
 		"socket.io": "^4.5.2",
 		"socket.io-client": "^4.5.3",
 		"three": "^0.145.0"
@@ -38,6 +41,7 @@
 		"nodemon": "^2.0.20",
 		"style-loader": "^3.3.1",
 		"to-string-loader": "^1.2.0",
+		"url-loader": "^4.1.1",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0"
 	}
