--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"bcrypt": "^5.1.0",
 		"bootstrap": "^5.0.0",
 		"boxicons": "^2.1.4",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"ejs": "^3.1.8",
 		"express": "^4.18.1",
