--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"chai": "^4.3.6",
 		"chai-http": "^4.3.0",
 		"css-loader": "^6.7.1",
+		"file-loader": "^6.2.0",
 		"html-loader": "^4.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.6.1",
