--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"raw-loader": "^4.0.2",
 		"socket.io": "^4.5.2",
 		"socket.io-client": "^4.5.3",
+		"sweetalert2": "^11.6.7",
 		"three": "^0.145.0"
 	},
 	"devDependencies": {
@@ -49,7 +50,6 @@
 		"mocha": "^10.1.0",
 		"nodemon": "^2.0.20",
 		"style-loader": "^3.3.1",
-		"to-string-loader": "^1.2.0",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0"
