--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"boxicons": "^2.1.4",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"css-minimizer-webpack-plugin": "^4.2.2",
 		"dotenv": "^16.0.3",
 		"ejs": "^3.1.8",
 		"express": "^4.18.1",
@@ -42,14 +43,11 @@
 		"@babel/core": "^7.19.6",
 		"@babel/preset-env": "^7.19.4",
 		"babel-loader": "^9.0.0",
-		"chai": "^4.3.6",
-		"chai-http": "^4.3.0",
 		"css-loader": "^6.7.1",
 		"file-loader": "^6.2.0",
 		"html-loader": "^4.2.0",
 		"html-webpack-plugin": "^5.5.0",
-		"mini-css-extract-plugin": "^2.6.1",
-		"mocha": "^10.1.0",
+		"mini-css-extract-plugin": "^2.7.0",
 		"nodemon": "^2.0.20",
 		"style-loader": "^3.3.1",
 		"url-loader": "^4.1.1",
